# Projects-A40

./: 1.py
STAC/: .gitignore  520.md  520_1.md  520_coding.md  CLAUDE.md  LICENSE  README.md  main.py  model_wrapper.py  requirements.txt  stream_session.py
STAC/attn-cuda/: README.md  setup.py
STAC/attn-cuda/attn_cuda/: __init__.py
STAC/attn-cuda/csrc/: bindings.cpp  launch.cu
STAC/attn-cuda/csrc/include/: common.h  kernel_traits.h  softmax.h
STAC/attn-cuda/csrc/kernels/: colsum_kernel.h  fwd_kernel.h
STAC/causalvggt/heads/: camera_head.py
STAC/causalvggt/layers/: attention.py  block.py  vision_transformer.py
STAC/causalvggt/models/: aggregator.py  vggt.py
STAC/causalvggt/utils/: geometry.py  helper.py
STAC/eval/cam_pose/: evo_utils.py  launch.py  run.sh  utils.py
STAC/eval/long_recon/: base.py  compare.py  criterion.py  data.py  eval_utils.py  launch.py  run.sh  run_causal.sh  run_win8.sh  utils.py
STAC/eval/long_recon/dataset_utils/: corr.py  cropping.py  transforms.py
STAC/eval/utils/: camera.py  collect_metrics.py  geometry.py  image.py  metrics.py
STAC/eval/video_depth/: eval_depth.py  launch.py  run.sh  run_all.sh  tools.py  utils.py
STAC/merger-cuda/: README.md  pyproject.toml  pytest.ini  setup.py
STAC/merger-cuda/csrc/: CMakeLists.txt  bindings.cpp  merger_wrapper.cu  merger_wrapper.h  stub_ops.cu
STAC/merger-cuda/csrc/include/: common.h  merger_kernels.cuh  merger_types.h
STAC/merger-cuda/csrc/kernels/: merger_kernels.cu  merger_pipeline.cu
STAC/merger-cuda/merger_cuda/: __init__.py
STAC/stac/: __init__.py  allocator.py  flash_attn_triton.py  h2o.py  kv_manager.py  merger.py  stac_voxel.py  voxel.py
